examples/test/testpolicy6778.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6778
  namespace: namespace479
spec:
  podSelector:
    matchLabels:
      key41: value15
      key6: value42
      key14: value1
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key23: value3
          key15: value46
          key1: value39
      podSelector:
        matchLabels:
          key48: value12
          key16: value42
          key43: value3
